# paytaxi-test

./: docker-compose.yml  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 0739940d9264_create_tables.py
paytaxi_test/: config.py  main.py
paytaxi_test/src/models/: employee.py
paytaxi_test/src/schemas/: employee.py
paytaxi_test/src/services/db/: base.py  dao.py
paytaxi_test/src/services/employee/: dao.py  employee.py  exceptions.py  prepare_data.py
paytaxi_test/tests/: conftest.py  mock_employees_2.json  mock_phones_2.json
paytaxi_test/tests/integration_tests/: test_api.py
paytaxi_test/tests/unit_tests/: test_prepare_data.py
