[tool.poetry]
name = "paytaxi-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
asyncpg = "^0.29.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
